--- a/package.json
+++ b/package.json
@@ -3,17 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
+    "server": "nodemon server/index.js",
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.3",
+    "aos": "^2.3.4",
+    "cors": "^2.8.5",
     "daisyui": "^5.5.5",
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0",
+    "lucide-react": "^0.554.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.3",
+    "nodemon": "^3.1.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
