--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^5.5.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
     "next": "16.0.3",
@@ -23,6 +24,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "sweetalert2": "^11.26.3",
