--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "firebase": "^12.6.0",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "nodemon": "^3.1.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
